--- a/fundamentos/sakila.html
+++ b/fundamentos/sakila.html
@@ -2,13 +2,24 @@
 <html>
     <head>
         <title>Sakila</title>
+     <link rel="stylesheet" href="estilos.css">
+     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     </head>
 
     <body>
 
         <h1>!Bienvenido a nuestra Pagina Web¡</h1>
-        <div><a href="formulario.html"><button style="border-color: black; width: 130px; height: 40px;">Registrarse</button></a></div>
         
+        <div id="header">
+            <ul class="nav">
+                <li><a href="formulario.html">Registrarse</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                 <li><a href="contacto.html">Contacto</a></li>
 
+
+            </ul>
+        </div>
+
+    
     </body>
 </html>
